# ocaml-monorepo-benchmark

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  bench.Dockerfile  custom-overlays-upstreaming.md  dune  dune-project  generate-duniverse.sh  mkopam.sh  opam-generate-big-monorepo.opam  opam-generate-big-monorepo.opam.locked  opam_monorepo_binary_search.sh  patch-upstreaming.md  postmortems.md  todo.md
.github/workflows/: test.yml
bench-proj/: Makefile
bench-proj/tools/: dune  dune_of_sexp.ml  library-ignore-list.sexp  list_duniverse_libraries.ml  run_dune_ml.sh
benchmark/: Dockerfile  Makefile  README.md  apply-patches.sh  assemble.Dockerfile  dune  dune-project  monorepo-bench.opam  monorepo-bench.opam.locked  monorepo.ml
benchmark/bench-patches/shuttle/: shuttle-error.diff
benchmark/patches/: aws-s3.diff  bastet-async.diff  biocaml.diff  codept.diff  colibrics.diff  lilac.diff  ocaml-aws.diff  ocaml-baguettesharp-interpreter.diff  ocaml-eris.diff  ocaml-flint.diff  ocaml-jupyter.diff  ocaml-mindstorm.diff  ocaml-monocypher.diff  ocaml-qbf.diff  ocaml-solidity.diff  pg_query-ocaml.diff  randoml.diff  tezos.diff
dune-benchmark-runner/: README.md  dune-project  ocaml-monorepo-benchmark-runner.opam
dune-benchmark-runner/src/: benchmark_result.ml  benchmark_result.mli  build_complete_stream.ml  build_complete_stream.mli  cli.ml  cli.mli  command.ml  command.mli  current_bench_json.ml  current_bench_json.mli  dune  dune_rpc_client.ml  dune_rpc_client.mli  dune_session.ml  dune_session.mli  main.ml  scenario_runner.ml  scenario_runner.mli  timer.mli  timing.ml  timing.mli
dune-monorepo-benchmark-runner/: README.md  dune-monorepo-benchmark-runner.opam  dune-project
dune-monorepo-benchmark-runner/src/: build_complete_stream.ml  cli.mli  command.ml  command.mli  dune  main.ml  scenario_runner.ml  text_file.ml  text_file.mli  timer.ml  watch_mode_file_to_change.ml  watch_mode_file_to_change.mli  watch_mode_scenarios.ml  watch_mode_scenarios.mli
generate/: Dockerfile  Makefile  README.md  custom-overlays-upstreaming.md  dune  dune-project  mkopam.sh  ocaml-monorepo-benchmark-generate.opam  opam-generate-big-monorepo.opam
generate/bench-patches/core/: core-error.diff  core-new-function.diff
generate/bench-patches/shuttle/: shuttle-change-message.diff
generate/bench-proj/: README.md
generate/bench-proj/tools/: dune  dune_of_sexp.ml  list_duniverse_libraries.ml  run_dune_ml.sh
generate/dotfiles/: tmux.conf
generate/lib/: dune  helpers.ml  helpers.mli  policy.ml  policy.mli  supported_versions.ml  supported_versions.mli
generate/patches/: OSCADml.diff  albatross.diff  alg_structs.diff  archetype-lang.diff  bastet-lwt.diff  bastet.diff  caisar.diff  camltc.diff  hacl-star.diff  lambda-streams.diff  ocaml-bigstring.diff  ocaml-crlibm.diff  ocaml-csv.diff  ocaml-junit.diff  ocaml-mock.diff  ocaml-mustache.diff  owl_opt.diff  resource-pooling.diff
lib/: dune  helpers.ml  helpers.mli
patches/: batteries-included.diff  biocaml.diff  hacl-star.diff
small-monorepo/: README.md  dune  dune-project  small-monorepo.opam  small-monorepo.opam.locked
