(lang dune 3.5)
(generate_opam_files true)
(name dune-monorepo-benchmark-runner)

(authors "Stephen Sherratt")
(maintainers "https://github.com/ocaml-dune/ocaml-monorepo-benchmark/issues")
(bug_reports "https://github.com/ocaml-dune/ocaml-monorepo-benchmark/issues")
(homepage "https://github.com/ocaml-dune/ocaml-monorepo-benchmark/dune-monorepo-benchmark-runner")

(package
 (name dune-monorepo-benchmark-runner)
 (synopsis "Tool for running dune monorepo benchmarks")
 (depends
  (ocaml (>= "4.14"))
  (dune-rpc-lwt (and (>= "3.8") (< "3.9")))
  (fmt (and (>= "0.9") (< "0.10")))
  (logs (and (>= "0.7") (< "0.8")))
  (re (and (>= "1.10") (< "1.11")))
  (yojson (and (>= "2.1") (< "2.2")))))
