(lang dune 3.13)
(generate_opam_files true)
(name dune-monorepo-benchmark-runner)

(authors "Stephen Sherratt")
(maintainers "https://github.com/ocaml-dune/ocaml-monorepo-benchmark/issues")
(bug_reports "https://github.com/ocaml-dune/ocaml-monorepo-benchmark/issues")
(homepage "https://github.com/ocaml-dune/ocaml-monorepo-benchmark/dune-monorepo-benchmark-runner")

(package
 (name dune-monorepo-benchmark-runner)
 (synopsis "Tool for running dune monorepo benchmarks")
 (depends
  ; Left unconstrained so that it's possible to update the test version of dune
  (ocaml (>= 4.14))
  ; No version constraint here since it will need to build with the latest
  ; version of dune anyway since in practice this will be re-built with dune
  ; pinned to the version being benchmarked.
  dune-rpc-lwt
  ; Other dependencies are constrained to specific values to reduce the risk of
  ; this package failing to build due to an API change in one of its dependencies.
  (lwt (= "5.6.1"))
  (fmt (= "0.9.0"))
  (logs (= "0.7.0"))
  (re (= "1.10.4"))
  (yojson (= "2.1.0"))))
