(lang dune 3.5)
(name ocaml-monorepo-benchmark-generate)

(generate_opam_files true)

(package
  (name ocaml-monorepo-benchmark-generate)
  (allow_empty true)
  (maintainers "Stephen Sherratt")
  (authors "Stephen Sherratt")
  (homepage "https://github.com/ocaml-dune/ocaml-monorepo-benchmark")
  (bug_reports "https://github.com/ocaml-dune/ocaml-monorepo-benchmark/issues")
  (synopsis "Generate a big project using opam monorepo")
  (depends
    (dune (>= 3.5.0))
    ocamlgraph
    opam-repository
    sexplib
    ppx_sexp_conv))
